cmake_minimum_required(VERSION 3.13) 
project(cxx_dsa)             
set(CMAKE_CXX_STANDARD 14)   

add_subdirectory(${CMAKE_SOURCE_DIR}/arrays)
add_subdirectory(${CMAKE_SOURCE_DIR}/binarySearch)
add_subdirectory(${CMAKE_SOURCE_DIR}/designPatterns)
add_subdirectory(${CMAKE_SOURCE_DIR}/greedyAlgorithms)
add_subdirectory(${CMAKE_SOURCE_DIR}/heaps)
add_subdirectory(${CMAKE_SOURCE_DIR}/linkedList)
add_subdirectory(${CMAKE_SOURCE_DIR}/recursion)
add_subdirectory(${CMAKE_SOURCE_DIR}/sorting)