cmake_minimum_required(VERSION 3.13) 
project(cxx_dsa)             
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE "Debug")   

add_subdirectory(${CMAKE_SOURCE_DIR}/arrays)
add_subdirectory(${CMAKE_SOURCE_DIR}/binarySearch)
add_subdirectory(${CMAKE_SOURCE_DIR}/designPatterns)
add_subdirectory(${CMAKE_SOURCE_DIR}/greedyAlgorithms)
add_subdirectory(${CMAKE_SOURCE_DIR}/heaps)
add_subdirectory(${CMAKE_SOURCE_DIR}/linkedList)
add_subdirectory(${CMAKE_SOURCE_DIR}/recursion)
add_subdirectory(${CMAKE_SOURCE_DIR}/sorting)
add_subdirectory(${CMAKE_SOURCE_DIR}/slidingWindow)
add_subdirectory(${CMAKE_SOURCE_DIR}/stacks)
add_subdirectory(${CMAKE_SOURCE_DIR}/dynamicProgramming)
add_subdirectory(${CMAKE_SOURCE_DIR}/graphs)
add_subdirectory(${CMAKE_SOURCE_DIR}/strings)