cmake_minimum_required(VERSION 3.13) 
project(cxx_arrays)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_setMatrixZeros 1_setMatrixZeros.cpp)
add_executable(2_pascalsTriangle 2_pascalsTriangle.cpp)
add_executable(3_KadaneAlgo 3_KadaneAlgo.cpp)
add_executable(4_sortArray0s1s2s 4_sortArray0s1s2s.cpp)
add_executable(5_rotateImageBy90deg 5_rotateImageBy90deg.cpp)
add_executable(6_mergeTwoSortedArrays 6_mergeTwoSortedArrays.cpp)
add_executable(7_searchIn2Dmatrix 7_searchIn2Dmatrix.cpp)
add_executable(8_twoSum 8_twoSum.cpp)