cmake_minimum_required(VERSION 3.13) 
project(cxx_design_patterns)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_factoryDesignPattern 1_factoryDesignPattern.cpp)
add_executable(2_abstractFactoryDesignPattern 2_abstractFactoryDesignPattern.cpp)
add_executable(3_SingletonDesignPattern 3_SingletonDesignPattern.cpp)