cmake_minimum_required(VERSION 3.13) 
project(cxx_dynamic_programming)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_binaryKnapsack 1_binaryKnapsack.cpp)
add_executable(2_subsetSum 2_subsetSum.cpp)
add_executable(3_equalSumPartition 3_equalSumPartition.cpp)
add_executable(4_countOfSubsetsGivenSum 4_countOfSubsetsGivenSum.cpp)
add_executable(5_minSubsetSumDiff 5_minSubsetSumDiff.cpp)
add_executable(6_countOfSubsetGivenDiff 6_countOfSubsetGivenDiff.cpp)
add_executable(7_targetSum 7_targetSum.cpp)
add_executable(8_unboundedKnapsack 8_unboundedKnapsack.cpp)
add_executable(9_rodCutting 9_rodCutting.cpp)
add_executable(10_coinChange_maxWays 10_coinChange_maxWays.cpp)
add_executable(11_coinChange_minCoins 11_coinChange_minCoins.cpp)
add_executable(12_longestCommonSubseq 12_longestCommonSubseq.cpp)
add_executable(13_longestCommonSubstring 13_longestCommonSubstring.cpp)
add_executable(14_printLCS 14_printLCS.cpp)
add_executable(15_ShortestCommonSuperSeq 15_ShortestCommonSuperSeq.cpp)
add_executable(16_minInsertAndDelete 16_minInsertAndDelete.cpp)
add_executable(17_longestPalindromicSubSeq 17_longestPalindromicSubSeq.cpp)
add_executable(18_minNumOfDelForPalindrome 18_minNumOfDelForPalindrome.cpp)
add_executable(19_printSCS 19_printSCS.cpp)
add_executable(20_longestRepeatingSubSeq 20_longestRepeatingSubSeq.cpp)
add_executable(21_seqPatternMatching 21_seqPatternMatching.cpp)
add_executable(22_minNumOfInsForPalindrome 22_minNumOfInsForPalindrome.cpp)
add_executable(23_matrixChainMultiplication 23_matrixChainMultiplication.cpp)
add_executable(24_palindromePartitioning 24_palindromePartitioning.cpp)
add_executable(25_evaluateExpressionToTrue 25_evaluateExpressionToTrue.cpp)