cmake_minimum_required(VERSION 3.13) 
project(cxx_linked_lists)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_reverseList 1_reverseList.cpp)
add_executable(2_removeNthNodeFromEnd 2_removeNthNodeFromEnd.cpp)
add_executable(3_middleOfList 3_middleOfList.cpp)
add_executable(4_mergeSortedLinkedList 4_mergeSortedLinkedList.cpp)
add_executable(5_addTwoNumsGivenAsList 5_addTwoNumsGivenAsList.cpp)
add_executable(6_intersectionOfLinkedList 6_intersectionOfLinkedList.cpp)
add_executable(7_detectCycleInLinkedList 7_detectCycleInLinkedList.cpp)
add_executable(8_palindromicList 8_palindromicList.cpp)
add_executable(9_reverseNodesinK-Grp 9_reverseNodesinK-Grp.cpp)
add_executable(10_startPointOfCycle 10_startPointOfCycle.cpp)

