cmake_minimum_required(VERSION 3.13) 
project(cxx_recursion)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_sortAnArray 1_sortAnArray.cpp)
add_executable(2_sortAStack 2_sortAStack.cpp)
add_executable(3_DeleteMiddleElementInStack 3_DeleteMiddleElementInStack.cpp)
add_executable(4_reverseAStack 4_reverseAStack.cpp)