cmake_minimum_required(VERSION 3.13) 
project(cxx_recursion)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_bubbleSort 1_bubbleSort.cpp)
add_executable(2_insertionSort 2_insertionSort.cpp)
add_executable(3_selectionSort 3_selectionSort.cpp)
add_executable(4_mergeSort 4_mergeSort.cpp)