cmake_minimum_required(VERSION 3.13) 
project(cxx_stacks)             
set(CMAKE_CXX_STANDARD 14)   

add_executable(1_NearestGreaterToRight 1_NearestGreaterToRight.cpp)
add_executable(2_NearestGreaterToLeft 2_NearestGreaterToLeft.cpp)
add_executable(3_NearestSmallerToLeft 3_NearestSmallerToLeft.cpp)
add_executable(4_NearestSmallerToRight 4_NearestSmallerToRight.cpp)
add_executable(5_StockSpan 5_StockSpan.cpp)
add_executable(6_MaxAreaOfHistogram 6_MaxAreaOfHistogram.cpp)
add_executable(7_MaxAreaBinaryMatrix 7_MaxAreaBinaryMatrix.cpp)
add_executable(8_RainWaterTrapping 8_RainWaterTrapping.cpp)
add_executable(9_MinStackWextraSpace 9_MinStackWextraSpace.cpp)
add_executable(10_MinStackWOextraSpace 10_MinStackWOextraSpace.cpp)